Add progress bar

--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "@typescript-eslint/utils": "5.36.2"
   },
   "dependencies": {
+    "@open-tech-world/cli-progress-bar": "^2.0.2",
     "cheerio": "^1.0.0-rc.12",
+    "cli-progress": "^3.11.2",
     "node-fetch": "^3.2.10"
   }
 }
