--- a/package.json
+++ b/package.json
@@ -7,40 +7,43 @@
   "license": "MIT",
   "type": "module",
   "devDependencies": {
-    "@babel/eslint-parser": "7.18.9",
-    "@next/eslint-plugin-next": "12.2.5",
-    "@types/node": "18.7.15",
-    "@types/react": "18.0.18",
-    "@types/react-dom": "18.0.6",
-    "@typescript-eslint/eslint-plugin": "5.36.2",
-    "@typescript-eslint/parser": "5.36.2",
-    "@upleveled/eslint-config-upleveled": "2.12.6",
+    "@babel/eslint-parser": "7.19.1",
+    "@next/eslint-plugin-next": "13.0.2",
+    "@ts-safeql/eslint-plugin": "0.0.21",
+    "@types/eslint": "8.4.10",
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.8",
+    "@typescript-eslint/eslint-plugin": "5.42.1",
+    "@typescript-eslint/parser": "5.42.1",
+    "@upleveled/eslint-config-upleveled": "^3.3.9",
     "@upleveled/eslint-plugin-upleveled": "2.1.6",
-    "eslint": "8.23.0",
+    "eslint": "8.27.0",
     "eslint-config-react-app": "7.0.1",
-    "eslint-import-resolver-typescript": "3.5.0",
-    "eslint-plugin-cypress": "2.12.1",
+    "eslint-import-resolver-typescript": "3.5.2",
     "eslint-plugin-flowtype": "8.0.3",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jest": "27.0.1",
+    "eslint-plugin-jest": "27.1.5",
     "eslint-plugin-jsx-a11y": "6.6.1",
-    "eslint-plugin-react": "7.31.7",
+    "eslint-plugin-jsx-expressions": "1.3.1",
+    "eslint-plugin-react": "7.31.10",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-security": "1.5.0",
-    "eslint-plugin-sonarjs": "0.15.0",
-    "eslint-plugin-testing-library": "5.6.1",
-    "eslint-plugin-unicorn": "43.0.2",
-    "typescript": "4.8.2"
+    "eslint-plugin-sonarjs": "0.16.0",
+    "eslint-plugin-testing-library": "5.9.1",
+    "eslint-plugin-unicorn": "44.0.2",
+    "libpg-query": "13.3.0",
+    "typescript": "4.8.4"
   },
   "resolutions": {
-    "@typescript-eslint/eslint-plugin": "5.36.2",
-    "@typescript-eslint/parser": "5.36.2",
+    "@typescript-eslint/eslint-plugin": "5.42.1",
+    "@typescript-eslint/parser": "5.42.1",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jest": "27.0.1",
+    "eslint-plugin-jest": "27.1.5",
     "eslint-plugin-jsx-a11y": "6.6.1",
-    "eslint-plugin-react": "7.31.7",
+    "eslint-plugin-react": "7.31.10",
     "eslint-plugin-react-hooks": "4.6.0",
-    "@typescript-eslint/utils": "5.36.2"
+    "@typescript-eslint/utils": "5.42.1"
   },
   "dependencies": {
     "@open-tech-world/cli-progress-bar": "^2.0.2",
